--- a/styles.scss
+++ b/styles.scss
@@ -95,7 +95,7 @@ body {
         line-height: 42px;
         letter-spacing: 0.7px;
     }
-    
+
     @media only screen and (max-width: 1200px) {
         width: calc(100% - 225px);
         padding-left: 30px;
@@ -166,7 +166,7 @@ body {
             padding-right: 20px;
         }
     }
-    
+
     @media only screen and (max-width: 1200px) {
         width: 225px;
         &__logo {
@@ -236,7 +236,7 @@ body {
             }
         }
     }
-    
+
     @media only screen and (max-width: 1200px) {
         button {
             font-size: 18px;
@@ -301,7 +301,7 @@ body {
         width: 100%;
         max-width: 655px;
     }
-    
+
     @media only screen and (max-width: 1700px) {
         max-width: 400px;
     }
@@ -344,7 +344,7 @@ body {
             box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
         }
     }
-    
+
     @media only screen and (max-width: 1700px) {
         padding-right: 0;
     }
@@ -357,5 +357,5 @@ body {
 }
 
 .dpd-burger {
-
+    border: solid 1px red;
 }
