--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,4 @@
-@mixin fontface($name, $file, $weight: normal, $style: normal){
+@mixin fontface($name, $file, $weight: normal, $style: normal) {
     @font-face {
         font-family: "#{$name}";
         font-display: swap;
@@ -10,6 +10,7 @@
 
 $color-secondary: #041157;
 $color-primary: #4ca0e9;
+$color-button: #E8F4FF;
 
 @include fontface('SoinSansNeue', 'Stawix - SoinSansNeue-Roman', 400);
 @include fontface('SoinSansNeue', 'Stawix - SoinSansNeue-Medium', 500);
@@ -81,6 +82,7 @@ body {
     background-color: #ffffff;
     border-top-left-radius: 70px;
     border-bottom-left-radius: 70px;
+
     h1 {
         color: $color-secondary;
         margin-top: -25px;
@@ -89,6 +91,7 @@ body {
         font-weight: 700;
         font-family: "SoinSansNeue", sans-serif;
     }
+
     h2 {
         font-size: 30px;
         padding-top: 10px;
@@ -100,6 +103,7 @@ body {
         width: calc(100% - 225px);
         padding-left: 30px;
         padding-right: 15px;
+
         h1 {
             margin-top: 0;
         }
@@ -110,6 +114,7 @@ body {
     width: 405px;
     padding: 50px 15px 0 0;
     background-color: #f9f9f9;
+
     &__logo {
         color: $color-secondary;
         font-size: 44px;
@@ -119,6 +124,7 @@ body {
         font-weight: 700;
         font-family: "SoinSansNeue", sans-serif;
     }
+
     &__title {
         font-size: 20px;
         font-weight: 500;
@@ -126,15 +132,19 @@ body {
         text-transform: uppercase;
         font-family: "SoinSansNeue", sans-serif;
     }
+
     &__list {
         padding: 20px 0 26px;
+
         img {
             width: 30px;
         }
+
         li {
             padding-left: 72px;
             margin-bottom: 24px;
             position: relative;
+
             &:hover {
                 &:after {
                     top: 0;
@@ -151,16 +161,19 @@ body {
                 }
             }
         }
+
         a {
             font-size: 30px;
             line-height: 38px;
             font-weight: 500;
             display: flex;
             align-items: center;
+
             &:hover {
                 color: $color-secondary;
             }
         }
+
         i {
             padding-left: 6px;
             padding-right: 20px;
@@ -169,16 +182,20 @@ body {
 
     @media only screen and (max-width: 1200px) {
         width: 225px;
+
         &__logo {
             padding-left: 15px;
         }
+
         &__title {
             padding-left: 15px;
         }
+
         &__list {
             li {
                 padding-left: 15px;
             }
+
             a {
                 font-size: 18px;
                 line-height: 24px;
@@ -193,6 +210,7 @@ body {
     align-items: flex-end;
     justify-content: flex-end;
     padding-right: 75px;
+
     &__dropdown {
         width: 286px;
         height: 70px;
@@ -214,6 +232,7 @@ body {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #eaeaea;
+
     button {
         color: $color-secondary;
         cursor: pointer;
@@ -222,6 +241,7 @@ body {
         font-weight: 500;
         position: relative;
         background-color: transparent;
+
         &:hover {
             &:after {
                 content: '';
@@ -251,23 +271,25 @@ body {
     align-items: center;
     justify-content: space-between;
     max-width: 690px;
+
     button {
         width: 100%;
-        height: 70px;
+        padding: .7em 1.5em;
         cursor: pointer;
         font-size: 25px;
         max-width: 335px;
         border-radius: 35px;
-        display: inline-flex;
+        display: flex;
         align-items: flex-end;
         justify-content: center;
         color: $color-secondary;
-        background-color: #e8f4ff;
-        &:last-of-type {
-            img {
-                margin-right: 15px;
-            }
+        background-color: $color-button;
+
+        img {
+            height: 27px;
+            margin-right: 15px;
         }
+
     }
 }
 
@@ -282,6 +304,7 @@ body {
     display: inline-flex;
     flex-direction: column;
     padding-right: 15px;
+
     input {
         width: 100%;
         height: 70px;
@@ -290,13 +313,16 @@ body {
         border-radius: 35px;
         background-color: #ffffff;
     }
+
     label {
         margin-bottom: 15px;
     }
+
     &--country {
         width: 100%;
         max-width: 495px;
     }
+
     &--location {
         width: 100%;
         max-width: 655px;
@@ -310,25 +336,30 @@ body {
 .dpd-form {
     padding-top: 50px;
     padding-right: 83px;
+
     &__top-row {
         display: flex;
         justify-content: space-between;
     }
+
     &__bottom-row {
         display: flex;
         justify-content: space-between;
         max-width: 934px;
     }
+
     label {
         font-weight: 500;
         font-size: 26px;
         line-height: 36px;
         color: $color-secondary;
     }
+
     input {
         color: $color-secondary;
         box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
     }
+
     button {
         width: 100%;
         height: 70px;
@@ -340,6 +371,7 @@ body {
         border-radius: 35px;
         justify-content: center;
         background-color: $color-primary;
+
         &:hover {
             box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
         }
@@ -348,14 +380,11 @@ body {
     @media only screen and (max-width: 1700px) {
         padding-right: 0;
     }
+
     @media only screen and (max-width: 1200px) {
         label {
             font-size: 18px;
             line-height: 24px;
         }
     }
-}
-
-.dpd-burger {
-    border: solid 1px red;
 }
