--- a/styles.css
+++ b/styles.css
@@ -279,7 +279,7 @@ body {
     color: #041157; }
   .dpd-form input {
     color: #041157;
-    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04); }
+    box-shadow: 0px 25px 90px rgba(152, 152, 152, 0.25); }
   .dpd-form button {
     width: 100%;
     height: 70px;
