--- a/styles.scss
+++ b/styles.scss
@@ -357,7 +357,8 @@ body {
 
     input {
         color: $color-secondary;
-        box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+        box-shadow: 0px 25px 90px rgba(152, 152, 152, 0.25);
+
     }
 
     button {
