--- a/styles.scss
+++ b/styles.scss
@@ -212,7 +212,7 @@ body {
     padding-right: 75px;
 
     &__dropdown {
-        width: 286px;
+        padding: .7em 1.5em;
         height: 70px;
         cursor: pointer;
         font-size: 26px;
