--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ h6,
 nav,
 button,
 header,
+select,
 a,
 input,
 textarea,
@@ -242,13 +243,17 @@ body {
   display: inline-flex;
   flex-direction: column;
   padding-right: 15px; }
-  .dpd-item input {
+  .dpd-item input,
+  .dpd-item select {
     width: 100%;
-    height: 70px;
+    padding: .7em 1.5em;
     font-size: 28px;
-    padding: 0 35px;
     border-radius: 35px;
     background-color: #ffffff; }
+  .dpd-item select {
+    text-align: center;
+    line-height: 1;
+    position: relative; }
   .dpd-item label {
     margin-bottom: 15px; }
   .dpd-item--country {
@@ -273,7 +278,8 @@ body {
     font-size: 26px;
     line-height: 36px;
     color: #041157; }
-  .dpd-form input {
+  .dpd-form input,
+  .dpd-form select {
     color: #041157;
     box-shadow: 0px 25px 90px rgba(152, 152, 152, 0.25); }
   .dpd-form button {
