--- a/styles.scss
+++ b/styles.scss
@@ -31,6 +31,7 @@ h6,
 nav,
 button,
 header,
+select,
 a,
 input,
 textarea,
@@ -304,13 +305,19 @@ body {
     flex-direction: column;
     padding-right: 15px;
 
-    input {
+    input,
+    select {
         width: 100%;
-        height: 70px;
+        padding: .7em 1.5em;
         font-size: 28px;
-        padding: 0 35px;
         border-radius: 35px;
         background-color: #ffffff;
+    }
+
+    select {
+        text-align: center;
+        line-height: 1;
+        position: relative;
     }
 
     label {
@@ -351,7 +358,8 @@ body {
         color: $color-secondary;
     }
 
-    input {
+    input,
+    select {
         color: $color-secondary;
         box-shadow: 0px 25px 90px rgba(152, 152, 152, 0.25);
     }
