--- a/scss/legacy.scss
+++ b/scss/legacy.scss
@@ -112,6 +112,9 @@ body {
 }
 
 .dpd-nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 405px;
   padding: 50px 15px 0 0;
   background-color: #f9f9f9;
@@ -132,6 +135,10 @@ body {
     padding-left: 78px;
     text-transform: uppercase;
     font-family: "SoinSansNeue", sans-serif;
+  }
+
+  .logout {
+    color: #061058;
   }
 
   &__list {
