--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,9 @@ body {
         margin-top: 0; } }
 
 .dpd-nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 405px;
   padding: 50px 15px 0 0;
   background-color: #f9f9f9; }
@@ -120,6 +123,8 @@ body {
     padding-left: 78px;
     text-transform: uppercase;
     font-family: "SoinSansNeue", sans-serif; }
+  .dpd-nav .logout {
+    color: #061058; }
   .dpd-nav__list {
     padding: 20px 0 26px; }
     .dpd-nav__list img {
