Added down icon for select menu

--- a/scss/legacy.scss
+++ b/scss/legacy.scss
@@ -188,6 +188,10 @@ body {
     }
   }
 
+  @include sm {
+    border: solid 1px red;
+  }
+
   @media only screen and (max-width: 1200px) {
     width: 225px;
 
