--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,9 @@ body {
     .dpd-nav__list i {
       padding-left: 6px;
       padding-right: 20px; }
+  @media (min-width: 576px) {
+    .dpd-nav {
+      border: solid 1px red; } }
   @media only screen and (max-width: 1200px) {
     .dpd-nav {
       width: 225px; }
