--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,6 @@ body {
 .dpd-body {
   padding-left: 85px;
   padding-bottom: 30px;
-  width: calc(100% - 405px);
   background-color: #ffffff;
   border-top-left-radius: 70px;
   border-bottom-left-radius: 70px; }
@@ -96,81 +95,10 @@ body {
     letter-spacing: 0.7px; }
   @media only screen and (max-width: 1200px) {
     .dpd-body {
-      width: calc(100% - 225px);
       padding-left: 30px;
       padding-right: 15px; }
       .dpd-body h1 {
         margin-top: 0; } }
-
-.dpd-nav {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 405px;
-  padding: 50px 15px 0 0;
-  background-color: #f9f9f9; }
-  .dpd-nav__logo {
-    color: #041157;
-    font-size: 44px;
-    line-height: 54px;
-    padding-left: 72px;
-    padding-bottom: 60px;
-    font-weight: 700;
-    font-family: "SoinSansNeue", sans-serif; }
-  .dpd-nav__title {
-    font-size: 20px;
-    font-weight: 500;
-    padding-left: 78px;
-    text-transform: uppercase;
-    font-family: "SoinSansNeue", sans-serif; }
-  .dpd-nav .logout {
-    color: #061058; }
-  .dpd-nav__list {
-    padding: 20px 0 26px; }
-    .dpd-nav__list img {
-      width: 30px; }
-    .dpd-nav__list li {
-      padding-left: 72px;
-      margin-bottom: 24px;
-      position: relative; }
-      .dpd-nav__list li:hover:after {
-        top: 0;
-        left: 0;
-        bottom: 0;
-        margin: auto;
-        content: '';
-        width: 10px;
-        height: 52px;
-        position: absolute;
-        border-top-right-radius: 10px;
-        border-bottom-right-radius: 10px;
-        background-color: #4ca0e9; }
-    .dpd-nav__list a {
-      font-size: 30px;
-      line-height: 38px;
-      font-weight: 500;
-      display: flex;
-      align-items: center; }
-      .dpd-nav__list a:hover {
-        color: #041157; }
-    .dpd-nav__list i {
-      padding-left: 6px;
-      padding-right: 20px; }
-  @media (min-width: 576px) {
-    .dpd-nav {
-      border: solid 1px red; } }
-  @media only screen and (max-width: 1200px) {
-    .dpd-nav {
-      width: 225px; }
-      .dpd-nav__logo {
-        padding-left: 15px; }
-      .dpd-nav__title {
-        padding-left: 15px; }
-      .dpd-nav__list li {
-        padding-left: 15px; }
-      .dpd-nav__list a {
-        font-size: 18px;
-        line-height: 24px; } }
 
 .dpd-header {
   height: 130px;
@@ -310,3 +238,76 @@ body {
     .dpd-form label {
       font-size: 18px;
       line-height: 24px; } }
+
+.dpd-nav {
+  position: absolute;
+  transform: translateX(-100%);
+  transition: all .5s ease; }
+  @media (min-width: 992px) {
+    .dpd-nav {
+      transform: translateX(0);
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 405px;
+      padding: 50px 15px 0 0;
+      background-color: #f9f9f9; }
+      .dpd-nav .logout {
+        color: #061058; }
+      .dpd-nav__list {
+        padding: 20px 0 26px; }
+        .dpd-nav__list img {
+          width: 30px; }
+        .dpd-nav__list li {
+          padding-left: 12px;
+          margin-bottom: 24px;
+          position: relative; }
+          .dpd-nav__list li:hover:after {
+            top: 0;
+            left: 0;
+            bottom: 0;
+            margin: auto;
+            content: '';
+            width: 10px;
+            height: 52px;
+            position: absolute;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+            background-color: #4ca0e9; }
+        .dpd-nav__list a {
+          font-size: 30px;
+          line-height: 38px;
+          font-weight: 500;
+          display: flex;
+          align-items: center; }
+          .dpd-nav__list a:hover {
+            color: #041157; }
+        .dpd-nav__list i {
+          padding-left: 6px;
+          padding-right: 20px; } }
+  @media (min-width: 1200px) {
+    .dpd-nav {
+      width: 405px; }
+      .dpd-nav__logo {
+        color: #041157;
+        font-size: 44px;
+        line-height: 54px;
+        padding-left: 12px;
+        padding-bottom: 60px;
+        font-weight: 700;
+        font-family: "SoinSansNeue", sans-serif; }
+      .dpd-nav__title {
+        font-size: 20px;
+        font-weight: 500;
+        padding-left: 12px;
+        text-transform: uppercase;
+        font-family: "SoinSansNeue", sans-serif; }
+      .dpd-nav__logo {
+        padding-left: 15px; }
+      .dpd-nav__title {
+        padding-left: 15px; }
+      .dpd-nav__list li {
+        padding-left: 15px; }
+      .dpd-nav__list a {
+        line-height: 24px; } }
