--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,7 @@
 @import 'scss/colors.scss';
 @import 'scss/breakpoints.scss';
 @import 'scss/legacy.scss';
+@import 'scss/page.scss';
 @import 'scss/sidebar.scss';
 @import 'scss/body.scss';
+@import 'scss/form.scss';
