Added options.scss page, added background red to body for contrast

--- a/scss/body.scss
+++ b/scss/body.scss
@@ -1,5 +1,5 @@
 .dpd-body {
-  background-color: #ffffff;
+  background-color: red;
   border-top-left-radius: 70px;
   border-bottom-left-radius: 70px;
 
