--- a/styles.scss
+++ b/styles.scss
@@ -4,4 +4,6 @@
 @import 'scss/page.scss';
 @import 'scss/sidebar.scss';
 @import 'scss/body.scss';
+@import 'scss/header.scss';
 @import 'scss/form.scss';
+@import 'scss/options.scss';
