--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,3 @@
-.dpd-header {
-  height: 130px;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  padding-right: 75px; }
-  .dpd-header__dropdown {
-    padding: .7em 1.5em;
-    height: 70px;
-    cursor: pointer;
-    font-size: 26px;
-    border-radius: 35px;
-    color: #041157;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #e8f4ff; }
-
 .dpd-tabs {
   padding-top: 38px;
   padding-right: 78px;
@@ -45,28 +27,6 @@
     .dpd-tabs button {
       font-size: 18px;
       line-height: 24px; } }
-
-.dpd-options {
-  padding: 60px 0 23px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 690px; }
-  .dpd-options button {
-    width: 100%;
-    padding: .7em 1.5em;
-    cursor: pointer;
-    font-size: 25px;
-    max-width: 335px;
-    border-radius: 35px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    color: #041157;
-    background-color: #E8F4FF; }
-    .dpd-options button img {
-      height: 27px;
-      margin-right: 15px; }
 
 .dpd-expiration {
   font-size: 20px; }
@@ -245,7 +205,7 @@ body {
     line-height: 24px; }
 
 .dpd-body {
-  background-color: #ffffff;
+  background-color: red;
   border-top-left-radius: 70px;
   border-bottom-left-radius: 70px; }
   .dpd-body h1 {
@@ -261,13 +221,42 @@ body {
     line-height: 42px;
     letter-spacing: 0.7px; }
 
+.dpd-header {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end; }
+  .dpd-header__dropdown {
+    padding: .7em 1.5em;
+    height: 70px;
+    cursor: pointer;
+    font-size: 26px;
+    border-radius: 35px;
+    color: #041157;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e8f4ff; }
+
+.dpd-form label {
+  font-size: 18px;
+  line-height: 24px; }
+
 .dpd-form__top-row {
   display: grid;
   grid-template-columns: 1fr; }
+  @media (min-width: 768px) {
+    .dpd-form__top-row {
+      grid-template-columns: 1fr 1fr; } }
+  @media (min-width: 992px) {
+    .dpd-form__top-row {
+      grid-template-columns: repeat(4, 1fr); } }
 
 .dpd-form__bottom-row {
   display: grid;
   grid-template-columns: 1fr; }
+  @media (min-width: 768px) {
+    .dpd-form__bottom-row {
+      grid-template-columns: 1fr 1fr; } }
 
 .dpd-form label {
   font-weight: 500;
@@ -298,7 +287,29 @@ body {
   .dpd-form {
     padding-right: 0; } }
 
-@media only screen and (max-width: 1200px) {
-  .dpd-form label {
-    font-size: 18px;
-    line-height: 24px; } }
+.dpd-options {
+  margin: 2em 0;
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 1fr;
+  justify-content: space-between;
+  max-width: 690px; }
+  @media (min-width: 992px) {
+    .dpd-options {
+      grid-template-columns: 1fr 1fr; } }
+  .dpd-options button {
+    margin: auto;
+    width: 100%;
+    padding: .7em 1.5em;
+    cursor: pointer;
+    font-size: 25px;
+    max-width: 335px;
+    border-radius: 35px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    color: #041157;
+    background-color: #E8F4FF; }
+    .dpd-options button img {
+      height: 27px;
+      margin-right: 15px; }
