--- a/scss/body.scss
+++ b/scss/body.scss
@@ -1,22 +1,38 @@
 .dpd-body {
+  padding: 1em;
   background-color: red;
-  border-top-left-radius: 70px;
-  border-bottom-left-radius: 70px;
+  border-radius: 70px;
+
+  @include md {
+    border-radius: 0;
+    border-top-left-radius: 70px;
+    border-bottom-left-radius: 70px;
+  }
 
   h1 {
+    margin: 1em 0;
     color: $color-secondary;
-    margin-top: -25px;
-    font-size: 63px;
-    line-height: 73px;
+    // margin-top: -25px;
+    text-align: center;
+    font-size: 40px;
     font-weight: 700;
     font-family: "SoinSansNeue", sans-serif;
+
+    @include md {
+      margin: .5em 0;
+      text-align: left;
+    }
   }
 
   h2 {
+    text-align: center;
     font-size: 30px;
     padding-top: 10px;
     line-height: 42px;
     letter-spacing: 0.7px;
-  }
 
+    @include md {
+      text-align: left;
+    }
+  }
 }
