--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,14 +1,16 @@
 .dpd-header {
 
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
+  justify-content: center;
+
+  @include md {
+    justify-content: flex-end;
+  }
 
   &__dropdown {
     padding: .7em 1.5em;
-    height: 70px;
     cursor: pointer;
-    font-size: 26px;
+    font-size: 20px;
     border-radius: 35px;
     color: $color-secondary;
     display: flex;
