--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,3 @@
-.dpd-tabs {
-  padding-top: 38px;
-  padding-right: 78px;
-  padding-bottom: 26px;
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #eaeaea; }
-  .dpd-tabs button {
-    color: #041157;
-    cursor: pointer;
-    font-size: 32px;
-    line-height: 42px;
-    font-weight: 500;
-    position: relative;
-    background-color: transparent; }
-    .dpd-tabs button:hover:after {
-      content: '';
-      left: 0;
-      width: 100%;
-      height: 10px;
-      bottom: -26px;
-      position: absolute;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-      background-color: #4ca0e9; }
-  @media only screen and (max-width: 1200px) {
-    .dpd-tabs button {
-      font-size: 18px;
-      line-height: 24px; } }
-
 .dpd-expiration {
   font-size: 20px; }
 
@@ -327,3 +297,38 @@ body {
     .dpd-options button img {
       height: 27px;
       margin-right: 15px; }
+
+.dpd-tabs {
+  padding-top: 38px;
+  padding-right: 78px;
+  padding-bottom: 26px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #eaeaea; }
+  .dpd-tabs button {
+    color: #041157;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 500;
+    position: relative;
+    background-color: transparent;
+    margin: 0 .5em; }
+    @media (min-width: 992px) {
+      .dpd-tabs button {
+        font-size: 25px;
+        line-height: 42px; } }
+    @media (min-width: 1400px) {
+      .dpd-tabs button {
+        font-size: 35px;
+        line-height: 42px; } }
+    .dpd-tabs button:hover:after {
+      content: '';
+      left: 0;
+      width: 100%;
+      height: 10px;
+      bottom: -26px;
+      position: absolute;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+      background-color: #4ca0e9; }
