--- a/styles.css
+++ b/styles.css
@@ -109,8 +109,12 @@ body {
 .dpd-nav {
   z-index: 5;
   position: absolute;
-  transform: translateX(-100%);
+  transform: translateX(-200%);
+  width: 100%;
+  background: #ffffff;
+  height: 100vh;
   transition: all .5s ease;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
   width: 405px; }
   @media (min-width: 1200px) {
     .dpd-nav {
@@ -175,7 +179,8 @@ body {
     line-height: 24px; }
 
 .show {
-  transform: translateX(0); }
+  transform: translateX(0);
+  margin: -1em; }
 
 .dpd-body {
   padding: 1em;
