changed background back to white

--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,7 @@ body {
 
 .dpd-body {
   padding: 1em;
-  background-color: red;
+  background-color: #ffffff;
   border-radius: 70px; }
   @media (min-width: 768px) {
     .dpd-body {
