--- a/styles.css
+++ b/styles.css
@@ -178,11 +178,9 @@ body {
     line-height: 24px; }
 
 .show {
-  transform: translateX(0);
-  margin: -1em; }
+  transform: translateX(0); }
 
 .dpd-body {
-  padding: 1em;
   background-color: #ffffff;
   border-radius: 70px; }
   @media (min-width: 768px) {
