--- a/scss/form.scss
+++ b/scss/form.scss
@@ -37,7 +37,7 @@
   input,
   select {
     color: $color-secondary;
-    box-shadow: 0px 25px 90px rgba(152, 152, 152, 0.25);
+    box-shadow: 0px 2px 11px rgba(152, 152, 152, 0.25)
   }
 
   button {
