--- a/scss/page.scss
+++ b/scss/page.scss
@@ -12,6 +12,10 @@
 @include fontface('SoinSansNeue', 'Stawix - SoinSansNeue-Medium', 500);
 @include fontface('SoinSansNeue', 'Stawix - SoinSansNeue-Bold', 700);
 
+body {
+  background-color: #F2F2F2;
+}
+
 html,
 body,
 div,
@@ -64,9 +68,7 @@ span {
 }
 
 body {
-  background-color: #f9f9f9;
-
-  padding: 1em;
+  background-color: #F2F2F2;
 }
 
 .dpd-page {
