--- a/scss/sidebar.scss
+++ b/scss/sidebar.scss
@@ -3,7 +3,7 @@
   position: absolute;
   transform: translateX(-200%);
   width: 100%;
-  background: #ffffff;
+  background-color: #F2F2F2;
   height: 100vh;
   transition: all .5s ease;
   padding: 50px 15px 0 0;
@@ -75,7 +75,6 @@
     flex-direction: column;
     justify-content: space-between;
     min-width: 405px;
-
     background-color: #f9f9f9;
   }
 
