--- a/scss/body.scss
+++ b/scss/body.scss
@@ -7,6 +7,9 @@
     border-radius: 0;
     border-top-left-radius: 70px;
     border-bottom-left-radius: 70px;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 5%;
   }
 
   h1 {
