Additional changes to options elements responsiveness

--- a/scss/options.scss
+++ b/scss/options.scss
@@ -4,8 +4,9 @@
   grid-gap: 1em;
   grid-template-columns: 1fr;
 
-  @include lg {
+  @include md {
     grid-template-columns: 1fr 1fr;
+    margin: 2em auto;
   }
 
   justify-content: space-between;
