--- a/styles.css
+++ b/styles.css
@@ -277,6 +277,9 @@ body {
     .dpd-options {
       grid-template-columns: 1fr 1fr;
       margin: 2em auto; } }
+  @media (min-width: 992px) {
+    .dpd-options {
+      margin: 2em 0; } }
   .dpd-options button {
     margin: auto;
     width: 100%;
