--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,8 @@ body {
     @media (min-width: 768px) {
       .dpd-body h1 {
         margin: .5em 0;
-        text-align: left; } }
+        text-align: left;
+        font-size: 3.5rem; } }
   .dpd-body h2 {
     text-align: center;
     font-size: 30px;
