--- a/scss/tabs.scss
+++ b/scss/tabs.scss
@@ -1,42 +1,79 @@
 .dpd-tabs {
-  padding-top: 38px;
-  padding-bottom: 26px;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-gap: .5em;
+  grid-template-columns: 1fr;
   border-bottom: 1px solid #eaeaea;
+  padding: 1em;
+
+  @include md {
+    grid-template-columns: 1fr 1fr;
+  }
 
   button {
-    color: $color-secondary;
     cursor: pointer;
-    font-size: 15px;
-    line-height: 24px;
-    font-weight: 500;
-    position: relative;
-    background-color: transparent;
-    margin: 0 .5em;
-
-    @include lg {
-      font-size: 25px;
-      line-height: 42px;
-    }
-
-    @include rwd {
-      font-size: 35px;
-      line-height: 42px;
-    }
+    border: solid 1px grey;
+    border-radius: 25px;
+    margin: auto;
+    padding: .6em 1.5em;
+    font-size: 1.2rem;
+    transition: all .5s ease;
+    color: rgb(4, 17, 87);
 
     &:hover {
-      &:after {
-        content: '';
-        left: 0;
-        width: 100%;
-        height: 10px;
-        bottom: -26px;
-        position: absolute;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        background-color: $color-primary;
-      }
+      background: rgb(4, 17, 87);
+      color: white;
     }
   }
+
+  @include lg {
+    padding-top: 38px;
+    padding-bottom: 26px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #eaeaea;
+
+    button {
+      border: 0;
+      color: $color-secondary;
+
+      font-size: 15px;
+      line-height: 24px;
+      font-weight: 500;
+      position: relative;
+      background-color: transparent;
+      margin: 0 .5em;
+
+      &:hover {
+        background: 0;
+        color: rgb(4, 17, 87);
+      }
+
+      @include lg {
+        font-size: 25px;
+        line-height: 42px;
+      }
+
+      @include rwd {
+        font-size: 35px;
+        line-height: 42px;
+      }
+
+      &:hover {
+        &:after {
+          content: '';
+          left: 0;
+          width: 100%;
+          height: 10px;
+          bottom: -26px;
+          position: absolute;
+          border-top-left-radius: 10px;
+          border-top-right-radius: 10px;
+          background-color: $color-primary;
+        }
+      }
+    }
+
+  }
+
+
 }
