--- a/styles.css
+++ b/styles.css
@@ -322,14 +322,16 @@ body {
       justify-content: space-between;
       border-bottom: 1px solid #eaeaea; }
       .dpd-tabs button {
+        margin: 0;
+        padding: 0;
         border: 0;
         color: #041157;
+        flex-shrink: 0;
         font-size: 15px;
         line-height: 24px;
         font-weight: 500;
         position: relative;
-        background-color: transparent;
-        margin: 0 .5em; }
+        background-color: transparent; }
         .dpd-tabs button:hover {
           background: 0;
           color: #041157; } }
@@ -339,8 +341,7 @@ body {
         line-height: 42px; } }
     @media (min-width: 992px) and (min-width: 1400px) {
       .dpd-tabs button {
-        font-size: 35px;
-        line-height: 42px; } }
+        font-size: 35px; } }
   @media (min-width: 992px) {
         .dpd-tabs button:hover:after {
           content: '';
