--- a/scss/sidebar.scss
+++ b/scss/sidebar.scss
@@ -66,7 +66,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-width: 405px;
+    // min-width: 305px;
     background-color: #f9f9f9;
   }
 
