--- a/styles.scss
+++ b/styles.scss
@@ -2,10 +2,11 @@
 @import 'scss/breakpoints.scss';
 @import 'scss/legacy.scss';
 @import 'scss/page.scss';
+@import 'scss/globals.scss';
 @import 'scss/sidebar.scss';
 @import 'scss/body.scss';
-@import 'scss/header.scss';
 @import 'scss/form.scss';
 @import 'scss/options.scss';
 @import 'scss/tabs.scss';
 @import 'scss/toggler.scss';
+@import 'scss/logout.scss';
