--- a/scss/body.scss
+++ b/scss/body.scss
@@ -13,12 +13,12 @@
     padding-right: 5%;
   }
 
-  h1 {
+  .dpd-body__h1 {
     margin: 1em 0;
     color: $color-secondary;
     text-align: center;
     font-size: 24px;
-    font-weight: 700;
+
     font-family: "SoinSansNeue", sans-serif;
 
     @include md {
