--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .dpd-expiration {
-  font-size: 20px;
-  margin: -1em auto 1em 0; }
+  font-size: 16px;
+  margin: -1em auto 2em 0; }
 
 .dpd-item {
   width: 100%;
@@ -12,7 +12,7 @@
   .dpd-item select {
     width: 100%;
     padding: .7em 1.5em;
-    font-size: 25px;
+    font-size: 20px;
     border-radius: 35px;
     background-color: #ffffff;
     -webkit-appearance: none; }
@@ -21,14 +21,11 @@
     line-height: 1;
     position: relative; }
   .dpd-item label {
-    margin-bottom: 15px; }
+    margin-bottom: 2px; }
   .dpd-item--country {
     width: 100%; }
   .dpd-item--location {
     width: 100%; }
-
-html {
-  font-size: 16px; }
 
 @font-face {
   font-family: "SoinSansNeue";
@@ -109,11 +106,6 @@ body {
   @media (min-width: 1200px) {
     .dpd-page {
       grid-template-columns: 1fr 4fr; } }
-
-h1 {
-  color: #041157;
-  line-height: 50px;
-  font-weight: 700; }
 
 .dpd-nav {
   z-index: 5;
@@ -197,23 +189,25 @@ h1 {
       border-radius: 0;
       border-top-left-radius: 70px;
       border-bottom-left-radius: 70px;
-      padding-left: 5%;
-      padding-right: 5%; } }
-  .dpd-body .dpd-body__h1 {
+      padding-left: 7.5%;
+      padding-right: 7.5%; } }
+  .dpd-body h1 {
     margin: 1em 0;
     color: #041157;
     text-align: center;
     font-size: 24px;
+    font-weight: 700;
     font-family: "SoinSansNeue", sans-serif; }
     @media (min-width: 768px) {
-      .dpd-body .dpd-body__h1 {
-        margin: .5em 0;
+      .dpd-body h1 {
+        margin: .2em 0;
         text-align: left;
-        font-size: 3rem; } }
+        font-size: 3rem; 
+          margin-top: 2%;
+      } }
   .dpd-body h2 {
     text-align: center;
     font-size: 20px;
-    padding-top: 10px;
     line-height: 42px;
     letter-spacing: 0.7px; }
     @media (min-width: 768px) {
@@ -221,11 +215,12 @@ h1 {
         text-align: left; } }
 
 main {
-  margin: auto; }
+  margin: auto;
+}
 
 .dpd-form label {
   font-size: 18px;
-  line-height: 24px; }
+  line-height: 20px; }
 
 .dpd-form__top-row {
   display: grid;
@@ -257,15 +252,16 @@ main {
 
 .dpd-form button {
   width: 100%;
-  height: 70px;
+  height: 50px;
   display: flex;
   color: #ffffff;
-  font-size: 28px;
+  font-size: 22px;
   cursor: pointer;
   align-items: center;
   border-radius: 35px;
   justify-content: center;
-  background-color: #4ca0e9; }
+  background-color: #4ca0e9;
+  margin-top: 2.5%; }
   .dpd-form button:hover {
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04); }
 
@@ -279,7 +275,7 @@ main {
   grid-gap: 1em;
   grid-template-columns: 1fr;
   justify-content: space-between;
-  max-width: 690px; }
+  max-width: 600px; }
   @media (min-width: 768px) {
     .dpd-options {
       grid-template-columns: 1fr 1fr;
@@ -288,12 +284,11 @@ main {
     .dpd-options {
       margin: 2em 0; } }
   .dpd-options button {
-    margin: auto;
     width: 100%;
     padding: .7em 1.5em;
     cursor: pointer;
-    font-size: 25px;
-    max-width: 335px;
+    font-size: 20px;
+    max-width: 275px;
     border-radius: 35px;
     display: flex;
     align-items: flex-end;
@@ -306,7 +301,7 @@ main {
 
 .dpd-tabs {
   padding-top: 38px;
-  padding-bottom: 26px;
+  padding-bottom: 20px;
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid #eaeaea; }
@@ -325,14 +320,14 @@ main {
         line-height: 42px; } }
     @media (min-width: 1400px) {
       .dpd-tabs button {
-        font-size: 25px;
+        font-size: 20px;
         line-height: 30px; } }
     .dpd-tabs button:hover:after {
       content: '';
       left: 0;
       width: 100%;
       height: 10px;
-      bottom: -26px;
+      bottom: -20px;
       position: absolute;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
@@ -363,10 +358,3 @@ main {
 .red .span:after,
 .red .span:before {
   background: red; }
-
-.logout {
-  display: flex;
-  flex-direction: column; }
-  .logout__h1 {
-    font-size: 4rem;
-    text-align: center; }
